--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 BenchmarkTools = "1.3.1"
-CodecZlib = 0.7.0"
+CodecZlib = "0.7.0"
 FASTX = "1.3.0"
 SortingAlgorithms = "1.0.1"
 StaticArrays = "1.4.4"
